// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutDialog should render 1`] = `
<Dialog
  actionbar={
    Object {
      "actions": Object {
        "center": Array [
          Object {
            "bsStyle": "default btn-inverse",
            "label": "More",
            "loading": false,
            "onClick": [Function],
          },
        ],
      },
    }
  }
  className="theme-about-dialog about-dialog"
  closeButton={true}
  header="About my super product"
  onHide={undefined}
  show={true}
  type="informative"
>
  <Icon
    className="theme-about-logo about-logo"
    name="talend-tdp-colored"
  />
  <div
    className="theme-about-excerpt about-excerpt"
  >
    <Text
      loading={false}
      text="Version: Summer 18"
    />
    <Text
      loading={false}
      text="© 2018 Talend. All Rights Reserved"
    />
  </div>
</Dialog>
`;

exports[`AboutDialog should render in loading mode 1`] = `
<Dialog
  actionbar={
    Object {
      "actions": Object {
        "center": Array [
          Object {
            "bsStyle": "default btn-inverse",
            "label": "More",
            "loading": true,
            "onClick": [Function],
          },
        ],
      },
    }
  }
  className="theme-about-dialog about-dialog"
  closeButton={true}
  header="About my super product"
  onHide={undefined}
  show={true}
  type="informative"
>
  <Icon
    className="theme-about-logo about-logo"
    name="talend-tdp-colored"
  />
  <div
    className="theme-about-excerpt about-excerpt"
  >
    <Text
      loading={true}
      text="Version: Summer 18"
    />
    <Text
      loading={true}
      text="© 2018 Talend. All Rights Reserved"
    />
  </div>
</Dialog>
`;

exports[`AboutDialog should render services 1`] = `
<Dialog
  actionbar={
    Object {
      "actions": Object {
        "center": Array [
          Object {
            "bsStyle": "default btn-inverse",
            "label": "Less",
            "loading": false,
            "onClick": [Function],
          },
        ],
      },
    }
  }
  className="theme-about-dialog about-dialog"
  closeButton={true}
  header="About my super product"
  onHide={undefined}
  show={true}
  type="informative"
>
  <Icon
    className="theme-about-logo about-logo"
    name="talend-tdp-colored"
  />
  <div
    className="theme-about-excerpt about-excerpt"
  >
    <Text
      loading={false}
      text="Version: Summer 18"
    />
    <Text
      loading={false}
      text="© 2018 Talend. All Rights Reserved"
    />
  </div>
  <Table
    services={
      Array [
        Object {
          "build": "87d0dcd-12e0d6f",
          "name": "API",
          "version": "2.8.0-SNAPSHOT",
        },
        Object {
          "build": "87d0dcd-12e0d6f",
          "name": "Dataset",
          "version": "2.8.0-SNAPSHOT",
        },
        Object {
          "build": "87d0dcd-12e0d6f",
          "name": "Preparation",
          "version": "2.8.0-SNAPSHOT",
        },
        Object {
          "build": "87d0dcd-12e0d6f",
          "name": "Transformation",
          "version": "2.8.0-SNAPSHOT",
        },
      ]
    }
    t={[Function]}
  />
</Dialog>
`;

exports[`AboutDialog should render with custom copyright 1`] = `
<Dialog
  actionbar={
    Object {
      "actions": Object {
        "center": Array [
          Object {
            "bsStyle": "default btn-inverse",
            "label": "More",
            "loading": false,
            "onClick": [Function],
          },
        ],
      },
    }
  }
  className="theme-about-dialog about-dialog"
  closeButton={true}
  header="About my super product"
  onHide={undefined}
  show={true}
  type="informative"
>
  <Icon
    className="theme-about-logo about-logo"
    name="talend-tdp-colored"
  />
  <div
    className="theme-about-excerpt about-excerpt"
  >
    <Text
      loading={false}
      text="Version: Summer 18"
    />
    <Text
      loading={false}
      text="custom copyrights"
    />
  </div>
</Dialog>
`;
